--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <div class="col"></div>
                         <div class="col">
                             <div class="container">
-                                <a type="button" href="https://www.instagram.com/j_dnell/"><img
+                                <a type="button" href="https://www.instagram.com/j_dnll/"><img
                                         src="Images/instagram.png" title="Instagram" width="40px" height="40px"
                                         alt="Instagram Button">
                                 </a>
