--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <meta name="description" content="This webpage contains information about Jadnell Reyes, 
     a Puerto Rican Computer Engineering Student">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,20 +28,18 @@
             </div>
 
             <ul id="menuButtonsList" class="hide">
-                <li class="options"><button class="menuButtons"" type=" button"
+                <li class="options"><button class="menuButtons"" type="button"
                         onclick="window.location.href='index.html';"> <img src="Images/aboutMe.png" title="About Me"
                             width="50px" height="50px" alt="About Me Button"> </li>
-                <li class="options"><button class="menuButtons"" type=" button"
+                <li class="options"><button class="menuButtons"" type="button" disabled
                         onclick="window.location.href='progLanguagesPage.html';"> <img
                             src="Images/programmingLanguages.png" title="Programming Languages" width="50px"
                             height="50px" alt="Programming Languages Button"></li>
-                <li class="options"><button class="menuButtons"" type=" button"
+                <li class="options"><button class="menuButtons"" type="button" disabled
                         onclick="window.location.href='projectsPage.html';"> <img src="Images/projects.png"
                             title="Projects" width="50px" height="50px" alt="Projects Button"></li>
             </ul>
-
         </div>
-
     </div>
 
     <script>
@@ -58,7 +56,7 @@
             } // end function
         } // end for
     </script>
-
+    
     <div id="greeting">
         <h2>
             <center> Hello, </center>
