--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <meta name="description" content="This webpage contains information about Jadnell Reyes, 
     a Puerto Rican Computer Engineering Student">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,6 +20,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
+    <!-- One Button Navigation Bar-->
     <div class="navBar">
         <div class="menu">
             <div id="selectMenu">
@@ -28,20 +29,21 @@
             </div>
 
             <ul id="menuButtonsList" class="hide">
-                <li class="options"><button class="menuButtons"" type="button"
+                <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='index.html';"> <img src="Images/aboutMe.png" title="About Me"
                             width="50px" height="50px" alt="About Me Button"> </li>
-                <li class="options"><button class="menuButtons"" type="button" disabled
+                <li class="options"><button class="menuButtons"" type=" button" disabled
                         onclick="window.location.href='progLanguagesPage.html';"> <img
                             src="Images/programmingLanguages.png" title="Programming Languages" width="50px"
                             height="50px" alt="Programming Languages Button"></li>
-                <li class="options"><button class="menuButtons"" type="button" disabled
+                <li class="options"><button class="menuButtons"" type=" button" disabled
                         onclick="window.location.href='projectsPage.html';"> <img src="Images/projects.png"
                             title="Projects" width="50px" height="50px" alt="Projects Button"></li>
             </ul>
         </div>
     </div>
 
+    <!-- Script for Navigation Bar Operation Onclick -->
     <script>
         var selectMenu = document.getElementById("selectMenu");
         var menuButtonsList = document.getElementById("menuButtonsList");
@@ -56,7 +58,8 @@
             } // end function
         } // end for
     </script>
-    
+
+    <!--Text Greeting-->
     <div id="greeting">
         <h2>
             <center> Hello, </center>
@@ -68,6 +71,7 @@
 
     <br>
 
+    <!-- Image and Info Cards Containers -->
     <div class="container text-center">
         <div class="row">
             <div class="col">
@@ -114,6 +118,7 @@
         </div>
     </div>
 
+    <!-- Social Media Bar (Footer) -->
     <div class="container">
         <footer>
             <br>
