--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <meta name="description" content="This webpage contains information about Jadnell Reyes, 
     a Puerto Rican Computer Engineering Student">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init('ELMXtOZt_-M3UQsLY');
+        })();
+    </script>
     <title> Jadnell Reyes' Portfolio </title>
 </head>
 
@@ -19,6 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
 
     <!-- One Button Navigation Bar-->
     <div class="navBar">
@@ -75,23 +82,25 @@
     <div class="container text-center">
         <div class="row">
             <div class="col">
-                <div class="placeholder"></div>
                 <div class="container">
                     <center>
-                        <a><img id="myPic" src="Images/TRENZAS ME.jpg" title="Hello! This is me" width="300px"
-                                height="300px" alt="I was supposed to appear here..."></a>
+                        <a><img class="mainPictures" src="Images/TRENZAS ME.jpg" title="Hello! This is me" width="250px"
+                                height="250px" alt="I was supposed to appear here..."></a>
+                        <br>
+                        <a><img class="mainPictures" src="Images/BEACH.jpg" title="This is Puerto Rico" width="250px" height="250px"
+                                alt="Picture of a Beach in Puerto Rico"></a>
+
                     </center>
-                    <div class="placeholder"></div>
+
                 </div>
             </div>
 
             <div class="col">
                 <div class="container">
                     <div class="infoCard">
-                        <h3>
+                        <h3 id="summary">
                             <center> Summary: </center>
                         </h3>
-                        <br>
                         <p>
                             I'm a Puerto Rican Senior Computer Engineering Student, from the Polytechnic University
                             of Puerto Rico.
@@ -102,9 +111,22 @@
                 <div class="placeholder"></div>
                 <div class="container">
                     <div class="infoCard">
-                        <h3>
-                            <center> Contact: </center>
+                        <h3 id="contact">
+                            <center> Contact Me: </center>
                         </h3>
+
+                        <!-- Contact Form: -->
+                        <div class="form">
+                            <input type="text" class="formButtons" id="firstName" placeholder="First Name:" required />
+                            <input type="text" class="formButtons" id="lastName" placeholder="Last Name:" required />
+                            <br>
+                            <input type="email" class="formButtons" id="email" placeholder="Email:" required /> <br>
+                            <textarea placeholder="Message:" id="message" class="formButtons" required></textarea><br>
+                            <button onclick="sendMail()" id="submitButton" class="formButtons"> Submit
+                            </button>
+                        </div>
+
+                        <!-- 
                         <ul class="lists">
                             <li> <b><i>Phone Number:</i></b> <a id="link" href="tel:787-605-5895"> (787) 605-5895 </a>
                             </li>
@@ -112,11 +134,26 @@
                                     jadnellReyes@gmail.com</a>
                             </li>
                         </ul>
+                        -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script>
+        function sendMail() {
+            var params = {
+                from_name: document.getElementById("firstName").value,
+                from_lastName: document.getElementById("lastName").value,
+                email: document.getElementById("email").value,
+                message: document.getElementById("message").value
+            }
+            emailjs.send("service_owfhcj3", "template_h244kvb", params).then(function (res) {
+                alert("Message sent successfully!");
+            })
+        } 
+    </script>
 
     <!-- Social Media Bar (Footer) -->
     <div class="container">
