Changes to font and added social media headings

--- a/index.html
+++ b/index.html
@@ -68,12 +68,10 @@
 
     <!--Text Greeting-->
     <div id="greeting">
-        <h2>
-            <center> Hello, </center>
-        </h2>
-        <h1>
-            <center> my name is Jadnell H. Reyes Pérez </center>
-        </h1>
+        <center>
+            <h2 class="greeting"> Hello, </h2>
+            <h1 class="greeting"> my name is Jadnell H. Reyes Pérez </h1>
+        </center>
     </div>
 
     <br>
@@ -87,8 +85,8 @@
                         <a><img class="mainPictures" src="Images/TRENZAS ME.jpg" title="Hello! This is me" width="250px"
                                 height="250px" alt="I was supposed to appear here..."></a>
                         <br>
-                        <a><img class="mainPictures" src="Images/BEACH.jpg" title="This is Puerto Rico" width="250px" height="250px"
-                                alt="Picture of a Beach in Puerto Rico"></a>
+                        <a><img class="mainPictures" src="Images/BEACH.jpg" title="This is Puerto Rico" width="250px"
+                                height="250px" alt="Picture of a Beach in Puerto Rico"></a>
 
                     </center>
 
@@ -176,6 +174,7 @@
                                         src="Images/instagram.png" title="Instagram" width="40px" height="40px"
                                         alt="Instagram Button">
                                 </a>
+                                <h6> Instagram </h6>
                             </div>
                         </div>
                         <div class="col">
@@ -184,6 +183,7 @@
                                         src="Images/twitter.png" title="Twitter" width="40px" height="40px"
                                         alt="Twitter Button">
                                 </a>
+                                <h6> Twitter </h6>
                             </div>
                         </div>
 
@@ -192,6 +192,7 @@
                                 <a type="button" href="https://github.com/jadnell555"><img src="Images/github.png"
                                         title="GitHub" width="40px" height="40px" alt="GitHub Button">
                                 </a>
+                                <h6> GitHub </h6>
                             </div>
                         </div>
                         <div class="col"></div>
