Enabled progLanguages and Projects Blank Pages

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='index.html';"> <img src="Images/aboutMe.png" title="About Me"
                             width="50px" height="50px" alt="About Me Button"> </li>
-                <li class="options"><button class="menuButtons"" type=" button" disabled
+                <li class="options"><button class="menuButtons"" type=" button"
                         onclick="window.location.href='progLanguagesPage.html';"> <img
                             src="Images/programmingLanguages.png" title="Programming Languages" width="50px"
                             height="50px" alt="Programming Languages Button"></li>
-                <li class="options"><button class="menuButtons"" type=" button" disabled
+                <li class="options"><button class="menuButtons"" type=" button" 
                         onclick="window.location.href='projectsPage.html';"> <img src="Images/projects.png"
                             title="Projects" width="50px" height="50px" alt="Projects Button"></li>
             </ul>
