--- a/projectsPage.html
+++ b/projectsPage.html
@@ -4,188 +4,114 @@
 <HTML xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title> Jadnell Reyes' Website </title>
-    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
+    <meta charset="utf-8">
+    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <meta name="description" content="This webpage contains information about Jadnell Reyes, 
+    a Puerto Rican Computer Engineering Student">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Jadnell Reyes' Portfolio </title>
 </head>
 
 <body>
-    <header>
-        <static div id="navbar">
-            <center>
-                <a class="button" href="index.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
-                        height="50px" alt="Where is my button?">
-                </a>
+    <header></header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
-                <a class="button" href="projectsPage2.html"><img src="Images/otherStyleSheet.png"
-                        title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
-                </a>
 
-                <a class="button" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
-                        title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="projectsPage.html">
-                    <img src="Images/projects.png" title="Projects" width="50px" height="50px"
-                        alt="Where is my button?">
-                </a>
-
-                <a class="button" href="javascriptPreQuiz.html"><img src="Images/page.png" title="JavaScript Pre-Quiz"
-                        width="50px" height="50px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="animation.html"><img src="Images/animation.png" title="Adobe Animate Animation"
-                        width="50px" height="50px" alt="Where is my button?">
-                </a>
-                
-                <a class="button" href="https://github.com/jadnell555/jadnell555.github.io/blob/main/textbooks_HW4.zip"><img src="Images/xml.png" title="Book List XML Document" width="50px"
-                        height="50px" alt="Where is my button?">
-                </a>
-            </center>
+    <!-- One Button Navigation Bar-->
+    <div class="navBar">
+        <div class="menu">
+            <div id="selectMenu">
+                <button id="menuButton" type="button"> <img src="Images/hamburgerMenu.png" title="Menu" width="50px"
+                        height="50px" alt="Menu Button"> </button>
             </div>
-    </header>
+
+            <ul id="menuButtonsList" class="hide">
+                <li class="options"><button class="menuButtons"" type=" button"
+                        onclick="window.location.href='index.html';"> <img src="Images/aboutMe.png" title="About Me"
+                            width="50px" height="50px" alt="About Me Button"> </li>
+                <li class="options"><button class="menuButtons"" type=" button"
+                        onclick="window.location.href='progLanguagesPage.html';"> <img
+                            src="Images/programmingLanguages.png" title="Programming Languages" width="50px"
+                            height="50px" alt="Programming Languages Button"></li>
+                <li class="options"><button class="menuButtons"" type=" button"
+                        onclick="window.location.href='projectsPage.html';"> <img src="Images/projects.png"
+                            title="Projects" width="50px" height="50px" alt="Projects Button"></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Script for Navigation Bar Operation Onclick -->
+    <script>
+        var selectMenu = document.getElementById("selectMenu");
+        var menuButtonsList = document.getElementById("menuButtonsList");
+
+        selectMenu.onclick = function () {
+            menuButtonsList.classList.toggle("hide");
+        } // end function
+
+        for (Option of options) {
+            Option.onclick = function () {
+                menuButtonsList.classList.toggle("hide");
+            } // end function
+        } // end for
+    </script>
 
     <br><br>
 
     <center>
-        <h2> Projects for University Classes: </h2>
+        <h2> Projects: </h2>
     </center>
 
-    <hr width="90%">
 
-    <ol>
-        <b>
-            <li>
-                <h3> Haresh's Eating Truck: </h3>
-            </li>
-        </b>
 
-        <p class="desc"><b><i> Description: </i></b> Haresh's Eating Truck was my final project of the CECS 2223
-            (Computer Programming Lab II) course. The purpose of this
-            project was to test our knowledge on C++ classes and objects.
-            The program runs inside the terminal and it is composed
-            of a menu that holds 6 different options. These options are
-            entering a new item, entering a customer order, export all inventory
-            items (to a .csv file), create combos, about me and exit. The program
-            also printed the receipts for each order in a .txt file.</p>
-        <center>
-            <p><b><i> Language: </i></b></p>
-            <a><img src="Images/c++.png" title="C++" width="150px" height="150px" alt="C++ Logo"></a>
+    <!-- Social Media Bar (Footer) -->
+    <div class="container">
+        <footer>
             <br>
-            <p><b><i> Status: </i></b> Finished. </p>
-            <p><b><i> Future Work: </i></b> Create a GUI (Graphical User Interface) for easier accessibility.</p>
-            <p><b><i> Program: </i></b></p>
+            <h4>
+                <center> Social Media: </center>
+            </h4>
 
-            <img src="Images/hareshEatingTruck.png" title="Haresh's Eating Truck" width="435px" height="435px"
-                alt="The project didn't load."></a>
-        </center>
+            <div id="socialMediaBar">
+                <br>
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col">
+                            <div class="container">
+                                <a type="button" href="https://www.instagram.com/j_dnll/"><img
+                                        src="Images/instagram.png" title="Instagram" width="40px" height="40px"
+                                        alt="Instagram Button">
+                                </a>
+                                <h6> Instagram </h6>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="container">
+                                <a type="button" href="https://www.twitter.com/jadnellReyes"><img
+                                        src="Images/twitter.png" title="Twitter" width="40px" height="40px"
+                                        alt="Twitter Button">
+                                </a>
+                                <h6> Twitter </h6>
+                            </div>
+                        </div>
 
-        <hr width="100%">
-
-        <b>
-            <li>
-                <h3> Haresh Quiz Game: </h3>
-            </li>
-        </b>
-
-        <p class="desc"><b><i> Description: </i></b> The project consists of creating a simple game using the
-            graphics.py
-            module. Haresh Quiz Game is a quiz game that consists of 20 questions.
-            You start with three lives, every time you answer a question incorrectly
-            you lose one. If you lose all of your lives it's game over. This project
-            was handed in as a midterm project for the CECS 3210 (Advanced Programming)
-            course.</p>
-        <center>
-            <p><b><i> Language: </i></b> </p>
-            <img src="Images/python.png" title="Python" width="150px" height="150px" alt="Python Logo"></a>
-            <p><b><i> Status: </i></b> Finished. </p>
-            <p><b><i> Program: </i></b></p>
-        </center>
-        <center>
-            <img src="Images/hareshQuizGame.png" title="Haresh Quiz Game" width="500px" height="500px"
-                alt="The project didn't load."></a>
-        </center>
-        <hr width="90%">
-        <b>
-            <li>
-                <h3> Webpage About Me: </h3>
-            </li>
-        </b>
-
-        <p class="desc"><b><i> Description: </i></b> This is my current project, the webpage you are interacting with.
-            The purpose
-            of this assignment is to demonstrate how much knowledge we obtained from the first
-            lectures in HTML, XHTML and CSS. The code for this course is CECS 3214-80
-            (Internet Programming I).
-            <center>
-                <p><b><i> Languages: </i></b> </p>
-                <img src="Images/html.png" title="HTML5" width="150px" height="150px" alt="HTML5 Logo"></a>
-                <img src="Images/css.png" title="CSS3" width="150px" height="150px" alt="CSS3 Logo"></a>
-                <p><b><i> Status: </i></b> Finished.</p>
-            </center>
-            <hr width="90%">
-    </ol>
-
-    <center>
-        <h2> Personal Projects: </h2>
-    </center>
-
-    <ol>
-        <b>
-            <li>
-                <h3>PlantApp: </h3>
-            </li>
-        </b>
-        <p class="desc"><b><i> Description: </i></b> I started working on this personal project to learn more about
-            mobile
-            application
-            development. More specifically, to learn the Flutter framework, which uses
-            Google-developed Dart programming language. It is a mobile app that works both on
-            android and iPhone. At the moment, the main idea for this app is to work as a list
-            or database of your plants. You would have the ability to create new plant objects
-            with relevant information about your plant such as light type, watering, growing
-            tips, pictures, etc. Each object would look like a stack of cards that the user
-            can swipe to keep reading more details about the plant. </p>
-        <center>
-            <p><b><i> Language: </i></b></p>
-            <img src="Images/dart.png" title="Dart" width="150px" height="150px" alt="Dart Logo"></a>
-            <p><b><i> Status: </i></b> Work in progress... </p>
-            <p><b><i> Program: </i></b></p>
-
-            <img src="Images/plantApp.jpg" title="plantApp" width="400px" height="900px"
-                alt="The project didn't load."></a>
-        </center>
-    </ol>
-    <hr width="90%">
-
-    <footer>
-        <h4>
-            <center> Social Media: </center>
-        </h4>
-
-        <static div id="socialMediaBar">
-            <center>
-                <a class="button" href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png"
-                        title="About Me" width="50px" height="50px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="https://www.facebook.com/jadnell"><img src="Images/facebook.png"
-                        title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="https://github.com/jadnell555"><img src="Images/github.png"
-                        title="Programming Languages" width="50px" height="50px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="https://paypal.me/jadnell">
-                    <img src="Images/paypal.png" title="Projects" width="50px" height="50px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="https://discord.com/channels/@harshGhost.error"><img src="Images/discord.png"
-                        title="JavaScript Pre-Quiz" width="50px" height="50px" alt="Where is my button?">
-                </a>
-            </center>
+                        <div class="col">
+                            <div class="container">
+                                <a type="button" href="https://github.com/jadnell555"><img src="Images/github.png"
+                                        title="GitHub" width="40px" height="40px" alt="GitHub Button">
+                                </a>
+                                <h6> GitHub </h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 
 </HTML>
