Contact form fixes

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <br>
                             <input type="email" class="formButtons" id="email" placeholder="Email:" required /> <br>
                             <textarea placeholder="Message:" id="message" class="formButtons" required></textarea><br>
-                            <button onclick="sendMail()" id="submitButton" class="formButtons"> Submit
+                            <button onclick="sendMail()" id="submitButton" class="formButtons" disabled> Submit
                             </button>
                         </div>
 
