Removing redundant code

--- a/progLanguagesPage.html
+++ b/progLanguagesPage.html
@@ -59,166 +59,164 @@
             } // end function
         } // end for
     </script>
+    <h2>
+        <center>Programming Languages: </center>
+    </h2>
 
     <br>
-
-    <div class="container text-center">
-        <div class="row">
-            <div class="col">
-
-                <h2>
-                    <center>Programming Languages: </center>
-                </h2>
-
-                <div class="container">
-                    <div class="infoCard">
-                        <div class="container">
-                            <h3 id="frontEnd">
-                                <center> Front End Languages: </center>
-                            </h3>
-                            <br>
-                            <div class="row">
-                                <div class="col">
-                                    <div class="progLangCube">
-                                        <h6 class="progLangName"> HTML </h6>
-                                        <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
-                                            height="75px" alt="HTML Logo">
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="progLangCube">
-                                        <h6 class="progLangName"> CSS </h6>
-                                        <img class="progLangIcon" src="Images/css.png" title="CSS" width="75px"
-                                            height="75px" alt="CSS Logo">
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="progLangCube">
-                                        <h6 class="progLangName"> JavaScript </h6>
-                                        <img class="progLangIcon" src="Images/javaScript.png" title="JavaScript"
-                                            width="70px" height="70px" alt="JavaScript Logo">
-                                    </div>
-                                </div>
-                            </div>
-                            <br>
-                            <h3 id="frontEnd">
-                                <center> Object Oriented Languages: </center>
-                            </h3>
-                            <br>
-                            <div class="row">
-                                <div class="col">
-                                    <div class="progLangCube">
-                                        <h6 class="progLangName"> Python </h6>
-                                        <img class="progLangIcon" src="Images/python.png" title="Python" width="75px"
-                                            height="75px" alt="Python Logo">
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="progLangCube">
-                                        <h6 class="progLangName"> C++ </h6>
-                                        <img class="progLangIcon" src="Images/c++.png" title="C++" width="75px"
-                                            height="75px" alt="C++ Logo">
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="progLangCube">
-                                        <h6 class="progLangName"> Dart </h6>
-                                        <img class="progLangIcon" src="Images/dart.png" title="Dart" width="75px"
-                                            height="75px" alt="Dart Logo">
-                                    </div>
-                                </div>
-                            </div>
-                            <br>
-                            <h3 id="frontEnd">
-                                <center> Other Languages: </center>
-                            </h3>
-                            <br>
-                            <div class="row">
-                                <div class="col">
-                                    <div class="progLangCube">
-                                        <h6 class="progLangName"> MATLAB </h6>
-                                        <img class="progLangIcon" src="Images/matlab.png" title="MATLAB" width="75px"
-                                            height="75px" alt="MATLAB Logo">
-                                    </div>
-                                </div>
-                                <div class="col">
-
-                                </div>
-                                <div class="col">
-
-                                </div>
-                            </div>
+    <div class="container">
+        <div class="infoCard">
+            <div class="container text-center">
+                <h3 id="frontEnd">
+                    <center> Front End Languages: </center>
+                </h3>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="progLangName"> HTML </h6>
+                            <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px" height="75px"
+                                alt="HTML Logo">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="progLangName"> CSS </h6>
+                            <img class="progLangIcon" src="Images/css.png" title="CSS" width="75px" height="75px"
+                                alt="CSS Logo">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="progLangName"> JavaScript </h6>
+                            <img class="progLangIcon" src="Images/javaScript.png" title="JavaScript" width="70px"
+                                height="70px" alt="JavaScript Logo">
                         </div>
                     </div>
                 </div>
-            </div>
-<br>
-            <h2>
-                <center>Software & Technologies: </center>
-            </h2>
 
-            <div class="container">
-                <div class="infoCard">
-                    <div class="container">
-                        <h3 id="frontEnd">
-                            <center> Software: </center>
-                        </h3>
-                        <br>
-                        <div class="row">
-                            <div class="col">
-                                <div class="progLangCube">
-                                    <h6 class="softwareName"> ____ </h6>
-                                <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
-                                        height="75px" alt="HTML Logo"> -->
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progLangCube">
-                                    <h6 class="softwareName"> ____ </h6>
-                                <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
-                                        height="75px" alt="HTML Logo"> -->
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progLangCube">
-                                    <h6 class="softwareName"> ____ </h6>
-                                <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
-                                        height="75px" alt="HTML Logo"> -->
-                                </div>
-                            </div>
+                <br>
+                <h3 id="frontEnd">
+                    <center> Object Oriented Languages: </center>
+                </h3>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="progLangName"> Python </h6>
+                            <img class="progLangIcon" src="Images/python.png" title="Python" width="75px" height="75px"
+                                alt="Python Logo">
                         </div>
-                        <br>
-                        <h3 id="frontEnd">
-                            <center> Technologies: </center>
-                        </h3>
-                        <br>
-                        <div class="row">
-                            <div class="col">
-                                <div class="progLangCube">
-                                    <h6 class="techName"> ____ </h6>
-                                <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="progLangName"> C++ </h6>
+                            <img class="progLangIcon" src="Images/c++.png" title="C++" width="75px" height="75px"
+                                alt="C++ Logo">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="progLangName"> Dart </h6>
+                            <img class="progLangIcon" src="Images/dart.png" title="Dart" width="75px" height="75px"
+                                alt="Dart Logo">
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+                <h3 id="frontEnd">
+                    <center> Other Languages: </center>
+                </h3>
+                <br>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="progLangName"> MATLAB </h6>
+                            <img class="progLangIcon" src="Images/matlab.png" title="MATLAB" width="75px" height="75px"
+                                alt="MATLAB Logo">
+                        </div>
+                    </div>
+                    <div class="col">
+
+                    </div>
+                    <div class="col">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <h2>
+        <center>Software & Technologies: </center>
+    </h2>
+    <br>
+    
+    <div class="container">
+        <div class="infoCard">
+            <div class="container text-center">
+                <h3 id="frontEnd">
+                    <center> Software: </center>
+                </h3>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="softwareName"> ____ </h6>
+                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
                                         height="75px" alt="HTML Logo"> -->
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progLangCube">
-                                    <h6 class="techName"> ____ </h6>
-                                <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="softwareName"> ____ </h6>
+                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
                                         height="75px" alt="HTML Logo"> -->
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progLangCube">
-                                    <h6 class="techName"> ____ </h6>
-                                <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="softwareName"> ____ </h6>
+                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
                                         height="75px" alt="HTML Logo"> -->
-                                </div>
-                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <h3 id="frontEnd">
+                    <center> Technologies: </center>
+                </h3>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="techName"> ____ </h6>
+                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
+                                        height="75px" alt="HTML Logo"> -->
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="techName"> ____ </h6>
+                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
+                                        height="75px" alt="HTML Logo"> -->
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="progLangCube">
+                            <h6 class="techName"> ____ </h6>
+                            <!--    <img class="progLangIcon" src="Images/html.png" title="HTML" width="75px"
+                                        height="75px" alt="HTML Logo"> -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    </div>
     </div>
 
     <!-- Social Media Bar (Footer) -->
