Added Projects Page

--- a/progLanguagesPage.html
+++ b/progLanguagesPage.html
@@ -57,7 +57,7 @@
             Option.onclick = function () {
                 menuButtonsList.classList.toggle("hide");
             } // end function
-        } // end for
+        } // end for 
     </script>
     <br>
     <h2>
@@ -219,7 +219,7 @@
     <div class="container">
         <footer>
             <br>
-            <h4>
+            <h4 id="socialMedia">
                 <center> Social Media: </center>
             </h4>
 
