--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="container">
         <footer>
             <br>
-            <h4>
+            <h4 id="socialMedia">
                 <center> Social Media: </center>
             </h4>
 
