--- a/projectsPage.html
+++ b/projectsPage.html
@@ -60,11 +60,109 @@
         } // end for
     </script>
 
-    <br><br>
-
     <center>
         <h2> Projects: </h2>
     </center>
+
+    <div class="container" id="projectContainer">
+        <div class="projectCard">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="projectHeadings"> Title: </h3>
+                        <br>
+                        <center>
+                            <h4 class="projectTitle"> Haresh' Quiz Game</h4>
+                        </center>
+                        <br>
+
+                        <h3 class="projectHeadings"> Programming Language: </h3>
+                        <a><img class="projectLang" src="Images/python.png" title="Python" width="100px" height="100px"
+                                alt="Python Logo"></a>
+                    </div>
+
+                    <div class="col">
+                        <h3 class="projectHeadings"> Description: </h3>
+
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa earum illum pariatur dolorem
+                            dignissimos eligendi consectetur deleniti officia laboriosam quasi cupiditate dolores iusto
+                            unde mollitia numquam eius aspernatur, quis et.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa earum illum pariatur dolorem
+                            dignissimos eligendi consectetur deleniti officia laboriosam quasi cupiditate dolores iusto
+                            unde mollitia numquam eius aspernatur, quis et.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="projectCard">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="projectHeadings"> Title: </h3>
+                        <br>
+                        <center>
+                            <h4 class="projectTitle"> Haresh' Quiz Game</h4>
+                        </center>
+                        <br>
+
+                        <h3 class="projectHeadings"> Programming Language: </h3>
+                        <a><img class="projectLang" src="Images/python.png" title="Python" width="100px" height="100px"
+                                alt="Python Logo"></a>
+                    </div>
+
+                    <div class="col">
+                        <h3 class="projectHeadings"> Description: </h3>
+
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa earum illum pariatur dolorem
+                            dignissimos eligendi consectetur deleniti officia laboriosam quasi cupiditate dolores iusto
+                            unde mollitia numquam eius aspernatur, quis et.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa earum illum pariatur dolorem
+                            dignissimos eligendi consectetur deleniti officia laboriosam quasi cupiditate dolores iusto
+                            unde mollitia numquam eius aspernatur, quis et.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="projectCard">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="projectHeadings"> Title: </h3>
+                        <br>
+                        <center>
+                            <h4 class="projectTitle"> Haresh' Quiz Game</h4>
+                        </center>
+                        <br>
+
+                        <h3 class="projectHeadings"> Programming Language: </h3>
+                        <a><img class="projectLang" src="Images/python.png" title="Python" width="100px" height="100px"
+                                alt="Python Logo"></a>
+                    </div>
+
+                    <div class="col">
+                        <h3 class="projectHeadings"> Description: </h3>
+
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa earum illum pariatur dolorem
+                            dignissimos eligendi consectetur deleniti officia laboriosam quasi cupiditate dolores iusto
+                            unde mollitia numquam eius aspernatur, quis et.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa earum illum pariatur dolorem
+                            dignissimos eligendi consectetur deleniti officia laboriosam quasi cupiditate dolores iusto
+                            unde mollitia numquam eius aspernatur, quis et.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 
 
@@ -72,7 +170,7 @@
     <div class="container">
         <footer>
             <br>
-            <h4>
+            <h4 id="socialMedia">
                 <center> Social Media: </center>
             </h4>
 
