Added pictures to use and some minor changes

--- a/progLanguagesPage.html
+++ b/progLanguagesPage.html
@@ -137,10 +137,11 @@
                         </div>
                     </div>
                     <div class="col">
-
-                    </div>
-                    <div class="col">
-
+                        <div class="progLangCube">
+                            <h6 class="progLangName"> SQL </h6>
+                            <img class="progLangIcon" src="Images/sql.png" title="SQL" width="75px" height="75px"
+                                alt="SQL Logo">
+                        </div>
                     </div>
                 </div>
             </div>
